crates/swc_ecma_parser/tests/errors/issue-8268/2/input.ts
export { type export }
export { type if }
